[tool.poetry]
name = "mdfy"
version = "0.1.0"
description = "Effortlessly convert nested Python dictionaries into intuitive Markdown tables."
authors = ["k-ush <argoooooon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
lark = "^1.1.7"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.289"
pytest = "^7.4.2"
mypy = "^1.5.1"
black = "^23.9.1"
flake8 = "^6.1.0"
sphinx = "^7.2.6"
sphinx-rtd-theme = "^1.3.0"
sphinx-multiversion = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "git-tag"

[tool.ruff]
line-length = 88
ignore = ["F401"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]

[tool.isort]
profile = "black"
line_length = 88

multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
