[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mdfy"
version = "0.9.0"
description = "Transform text into beautiful markdown, effortlessly."
authors = [
    {name = "k-ush", email = "argoooooon@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
classifiers = ["Typing :: Typed"]
urls = {homepage = "https://github.com/argonism/mdfy", repository = "https://github.com/argonism/mdfy"}
dependencies = [
    "lark[styled-text]>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.0.1111",
    "pytest>=7.4.2",
    "mypy>=1.5.1",
    "black>=23.9.1",
    "tox>=4.8.0",
    "tox-gh-actions>=3.1.3",
    "xdoctest>=1.2.0",
]
docs = [
    "sphinx>=7.1.2",
    "furo>=2023.9.10",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.5.0",
    "sphinx-autobuild>=2021.3.14",
    "myst-parser>=2.0.0",
    "sphinx-multiversion>=0.2.4",
]

[tool.ruff]
line-length = 88
ignore = ["F401"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
